Fixed modal on small screens

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -333,7 +333,8 @@ ol, ul {
     right: 20px; }
   #modal-overlay .modal {
     width: 500px;
-    margin: 2rem auto; }
+    max-width: 80%;
+    margin: 5rem auto; }
 
 *,
 *::before,
