--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -17,6 +17,7 @@
 
     .modal {
         width: 500px;
-        margin: 2rem auto;
+        max-width: 80%;
+        margin: 5rem auto;
     }
 }
